<resources>
    <string name="pass_phone_to_next_player">Pass phone to next player.</string>
    <string name="next_player">Next Player</string>
    <string name="black_or_red">Black or red?</string>
    <string name="higher_or_lower">Higher or lower?</string>
    <string name="inside_or_outside">Inside or outside?</string>
    <string name="do_you_have_the_suit">Do you have the suit?</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="higher">Higher</string>
    <string name="lower">Lower</string>
    <string name="inside">Inside</string>
    <string name="outside">Outside</string>
    <string name="have">Have</string>
    <string name="dont_have">Don\'t have</string>
    <string name="post">Post</string>
    <string name="rainbow">Rainbow</string>
    <string name="start">Start</string>
    <string name="that_answer_is_correct">That answer is correct!</string>
    <string name="that_answer_is_wrong">That answer is wrong!</string>
    <string name="you_have_to_take">You have to take</string>
    <string name="sips">sips.</string>
    <string name="sips_per_mistake">Sips per mistake:</string>
    <string name="number_of_players">Number of players.</string>
    <string name="app_name">BeerBear</string>
    <string name="the_next_player_is">The next player is:</string>
    <string name="current_player">Current player:</string>
    <string name="turn_card">Turn card</string>
    <string name="pass_phone_to_player">Pass phone to player</string>
    <string name="you_can_place_a_card">You can place a card!</string>
    <string name="skip">Skip</string>
    <string name="give">Give</string>
    <string name="sips_to_player">sips to players.</string>
    <string name="continue_">Continue</string>
    <string name="how_many_do_you_want_to_place">How many do you want to place?</string>
    <string name="place">Place</string>
    <string name="player_in_the_bus">Player in the bus:</string>
    <string name="next">Next</string>
    <string name="the_game_is_finished">The game is finished!</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="buses">Buses</string>
    <string name="the_previous_card_was">The previous card was:</string>
    <string name="card_image">Card image</string>
    <string name="pannen">Pannen</string>
    <string name="mexxen">Mexxen</string>
    <string name="logoDescription">Logo for main</string>
    <string name="bet">Bet</string>
    <string name="enter_players">Enter Players</string>
    <string name="back">Back</string>
    <string name="your_numbers_are">your numbers are</string>
    <string name="and">and</string>
    <string name="meaning_you_have">meaning you have</string>
    <string name="please_add_a_player_first">Please add a player first</string>
    <string name="throw_dice">Throw dice</string>
    <string name="enter_name">Enter name</string>
    <string name="you_kept_a">you kept a</string>
    <string name="and_rolled_a">and rolled a</string>
    <string name="roll">Roll</string>
    <string name="add_player">Add player</string>
    <string name="go_on">Go on</string>
    <string name="new_player_added">New player added:</string>
    <string name="throw_again">Throw again</string>
    <string name="make_a_new_rule">Make a new rule</string>
    <string name="mex_in">Mex in</string>
    <string name="begins">begins</string>
    <string name="new_round">New round;</string>
    <string name="has_to_drink_because_his_score_is">has to drink because his score is</string>
    <string name="next_round">Next round</string>
    <string name="throws_left">throws left</string>
    <string name="has_21">has 21</string>
    <string name="has">has</string>
    <string name="it_is_the_turn_of">It is the turn of</string>
    <string name="finish_game">Finish Game</string>
    <string name="end_of_game">End of game</string>
    <string name="winning_players">Winning Player(s):</string>
    <string name="with_bets_of">With bet(s) of</string>
    <string name="poker">Poker</string>
    <string name="pass_the_phone_to_the_next_player">Pass the phone to next player</string>
    <string name="bet_made">Bet made</string>
</resources>
